# XREAL_BSP_RGB_Tool

./: .gitignore  CMakeLists.txt  README.md  RecordLabC技术文档.md  async_save.py  build.sh  doctor.sh  install_dependencies.sh  nrsensor_2026-05-18.txt  run.sh  setup.sh  setup_xreal_runtime.sh  start.sh  test_json_empty.cpp  test_json_nan.cpp  test_json_nan_cpp.cpp  test_json_null.cpp  test_startup.sh  tmp.json
config/: agents_config.json  recordLabConfig.json
docs/: RecordLabC_BSP使用文档.md  XREAL_BSP_RGB_Tool使用文档.md  debug.md  需求问答.txt
flowagent/core/: script_workflow.py
include/recordlab/agent/: agent_management_page.h
include/recordlab/app/: entry_page.h  main_window.h  workspace_page.h
include/recordlab/backend/: agent_manager_process.h  agent_watchdog.h  data_receiver.h  data_registry_server.h
include/recordlab/bsp/: bsp_asset_resolver.h  bsp_guide_status.h  bsp_orchestration_bridge.h  bsp_page.h  bsp_rgb_page.h  bsp_sdk_locator.h  native_glasses_adapter.h  xreal_runtime_locator.h  xreal_sdk_compat.h
include/recordlab/common/: camera_shared_memory.h  commands.h  data_registry_client.h  message_types.h  motion_detector.h  rate_limiter.h  topics.h
include/recordlab/core/: app_context.h  compatibility_contract.h  global_state.h  legacy_config_loader.h  legacy_paths.h  logger.h  qt_json_compat.h  ui_message_bridge.h  usb_device_catalog.h
include/recordlab/flowagent/agents/: base_agent.h  legacy_remote_action_client.h  localhost_agent.h
include/recordlab/flowagent/core/: agent_manager.h  script_executor.h
include/recordlab/script/: python_script_bridge.h  script_execution_page.h
include/recordlab/subnodes/: android_subnode.h  base_subnode.h  bsp_main_subnode.h  imu_sim_main_subnode.h  main_subnode.h  nviz_node_subnode.h
include/recordlab/ui/: control_center_main.h
include/recordlab/widgets/: camera_display_thread.h  data_monitor_widget.h  data_output_directory_widget.h  image_display_widget.h  nviz_message_tree_widget.h  nviz_tree_plot_widget.h  simple_curve_plot_widget.h
include/recordlab/workflow/: workflow_controller.h
resources/android_imu/arm64-v8a/: get_imu_data
scripts/: __init__.py  bootstrap_xreal_runtime.py  check_environment.py  example_notification.sh  localhost_README.md  nviz_ur_base.py  package_release.sh  play_video_on_secondary_screen.py  play_video_on_secondary_screen.sh  record_android_imu_simple_test.py  record_bsp_imu.py  record_bsp_imu_cam.py  record_bsp_imu_dynamic.py  record_bsp_imu_static.py  record_bsp_rgb.py  record_bsp_rgb_raw.py  record_helen_id1088_ur_gt_3dof_batch.py  record_ur_android_imu_batch.py  record_ur_gt_3dof.py  record_ur_gt_3dof_batch.py  stop_video.sh  test_nviz_node.py  test_play_video_on_glasses_screen.py  verify_imu_csv_order.py  xreal_bridge_worker.py
scripts/common/: __init__.py  camera_snapshot_worker.py  mic_record_worker.py  record_path_helper.py  screen_capture_helper.py  screen_capture_worker.py  xreal_va_compat.c
scripts/runtime/: run_recording_worker.py  run_recordlab_script.py
src/: main.cpp
src/agent/: agent_management_page.cpp
src/app/: entry_page.cpp  main_window.cpp  workspace_page.cpp
src/backend/: agent_manager_process.cpp  agent_watchdog.cpp  data_receiver.cpp  data_registry_server.cpp
src/bsp/: bsp_asset_resolver.cpp  bsp_guide_status.cpp  bsp_orchestration_bridge.cpp  bsp_page.cpp  bsp_rgb_page.cpp  bsp_sdk_locator.cpp  native_glasses_adapter.cpp  xreal_runtime_locator.cpp
src/common/: camera_shared_memory.cpp  data_registry_client.cpp  motion_detector.cpp
src/core/: app_context.cpp  global_state.cpp  legacy_config_loader.cpp  legacy_paths.cpp  logger.cpp  ui_message_bridge.cpp  usb_device_catalog.cpp
src/flowagent/agents/: base_agent.cpp  legacy_remote_action_client.cpp  localhost_agent.cpp
src/flowagent/core/: agent_manager.cpp  script_executor.cpp
src/script/: python_script_bridge.cpp  script_execution_page.cpp
src/subnodes/: android_subnode.cpp  android_subnode_entry.cpp  base_subnode.cpp  bsp_main_subnode.cpp  bsp_main_subnode_entry.cpp  helen_main_subnode_entry.cpp  imu_sim_main_subnode.cpp  imu_sim_main_subnode_entry.cpp  main_subnode.cpp  nviz_node_subnode.cpp  nviz_node_subnode_entry.cpp
src/tools/: agent_cmd_main.cpp  agent_probe_main.cpp  doctor_main.cpp
src/ui/: control_center_main.cpp
src/widgets/: camera_display_thread.cpp  data_monitor_widget.cpp  data_output_directory_widget.cpp  image_display_widget.cpp  nviz_message_tree_widget.cpp  nviz_tree_plot_widget.cpp  simple_curve_plot_widget.cpp
src/workflow/: workflow_controller.cpp
subnodes/bsp_shell/: capture_raw_frame.sh  fetch_remote_file.sh  glasses_config.sh
subnodes/nviz_node/: plot-current-before-merge-20260506.json  plot-old.json  plot.json
subnodes/nviz_node/shell/: close_pilot_gf.sh  close_pilot_shell  gf_3dof_end.sh  gf_3dof_end_record.sh  gf_3dof_start.sh  gf_3dof_start_record.sh  glasses_config.sh  normal_shell  open_pilot_gf.sh  open_sdk_global_shell  sdk_global_send_data_3dof.json
tool_scripts/: install_dependencies.sh  start_xreal_bsp_rgb.sh  update_project.sh
